--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,14 @@
 .App {
-  text-align: center;
-  max-width: 1260px;
+  text-align: Left;
   padding: 0 20px;
   margin: 0 auto;
 }
 .App .section {
   padding: 100px 0;
   max-width: 1160px;
+  margin: 0 auto;
+}
+.App .largeSection {
+  width: 1260px;
   margin: 0 auto;
 }
