--- a/src/components/convinced/ConvincedStyles.css
+++ b/src/components/convinced/ConvincedStyles.css
@@ -13,10 +13,11 @@
 .convinced .convincedCont p {
   width: 20%;
   font-size: 18px;
+  margin: 0;
 }
 .convinced .convincedCont .blueButton {
   /* width: 20%; */
-  align-self: center;
+  align-self: flex-start;
   display: flex;
   justify-content: space-between;
 }
