--- a/src/components/endorsement/EndorsementStyles.css
+++ b/src/components/endorsement/EndorsementStyles.css
@@ -8,7 +8,7 @@
 .endorsement .image {
   width: 50px;
   height: 50px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   border-radius: 50%;
   overflow: hidden;
   margin-right: 20px;
