--- a/src/components/info/InfoStyles.css
+++ b/src/components/info/InfoStyles.css
@@ -15,6 +15,14 @@
 }
 .info .right {
   padding: 50px;
+  opacity: 0;
+  position: relative;
+  right: -20px;
+  transition: opacity 0.5s ease, right 0.5s ease;
+}
+.info .right.active {
+  opacity: 1;
+  right: 0;
 }
 .info .right p {
   margin: 0;
