--- a/src/components/navbar/NavbarStyles.css
+++ b/src/components/navbar/NavbarStyles.css
@@ -75,7 +75,9 @@ nav.dark {
 
 @media only screen and (max-width: 768px) {
   .navFooter {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    padding: 0 0 50px 0;
   }
   nav .navRight {
     padding-top: 80px;
@@ -84,6 +86,9 @@ nav.dark {
   }
   nav div.container {
     padding: 0;
+  }
+  nav .logo {
+    margin-left: 20px;
   }
   nav .navLeft.active {
     display: none;
@@ -116,5 +121,17 @@ nav.dark {
   }
   body.menuActive {
     overflow: hidden;
+  }
+  .navFooter h3 {
+    font-family: "PT Mono", serif;
+    text-transform: uppercase;
+    font-size: 20px;
+    padding: 0 40px;
+  }
+  nav .navRight.active .navFooter a {
+    font-size: 16px;
+    text-decoration: none;
+    padding: 8px 0 0 0;
+    margin: 0 40px;
   }
 }
