--- a/src/components/navbar/NavbarStyles.css
+++ b/src/components/navbar/NavbarStyles.css
@@ -4,7 +4,7 @@ nav .navLeft {
 }
 nav .navLeft .logo {
   height: 44px;
-  margin-top: 8px;
+  margin: 8px 20px;
 }
 nav .navRight {
   display: flex;
@@ -50,7 +50,7 @@ nav.sticky {
   position: fixed;
   z-index: 200;
   left: 0px;
-  top: -63px;
+  top: -73px;
   justify-content: space-between;
   display: flex;
   width: 100%;
@@ -74,64 +74,109 @@ nav.dark {
 }
 
 @media only screen and (max-width: 768px) {
-  .navFooter {
+  .container {
+    height: auto;
+  }
+  /* .links {
+  } */
+  nav {
+    background-color: #002dff;
+  }
+  nav .navRight .navFooter {
     display: flex;
+    visibility: hidden;
+  }
+  nav .navRight.active .navFooter {
+    visibility: visible;
     flex-direction: column;
     padding: 0 0 50px 0;
   }
   nav .navRight {
-    padding-top: 80px;
+    transition: opacity 0.1s ease;
     background-color: #002dff;
-    display: none;
+    opacity: 0;
+    /* display: none; */
+    visibility: hidden;
   }
   nav div.container {
     padding: 0;
   }
   nav .logo {
-    margin-left: 20px;
+    margin: 0 0 20px 20px;
   }
   nav .navLeft.active {
     display: none;
   }
-  .links {
+  nav .navRight .links {
     display: flex;
     flex-direction: column;
+    /* height: 0px; */
+  }
+  nav .navRight.active .links {
+    display: flex;
+    /* height: auto; */
   }
   nav .navRight.active {
+    padding-top: 80px;
     box-sizing: border-box;
+    visibility: visible;
     display: flex;
+    opacity: 1;
     flex-direction: column;
     justify-content: space-between;
-    overflow: default;
+    overflow: auto;
     width: 100vw;
     height: 100vh;
     color: white;
+    overflow: auto;
+  }
+  nav .navRight a {
+    margin: -20px 40px 20px;
+    transition: margin 600ms ease, opacity 600ms ease;
+    opacity: 0;
+    font-size: 0;
   }
   nav .navRight.active a {
+    opacity: 1;
     padding: 0;
-    margin: 0 40px 20px;
     font-size: 50px;
     color: white;
+    margin-top: 0;
   }
   .activator {
     position: absolute;
     right: 20px;
-    top: 20px;
+    top: 13px;
     display: block;
   }
   body.menuActive {
     overflow: hidden;
   }
+  nav .navRight .navFooter {
+    overflow: auto;
+    margin-bottom: -100px;
+    opacity: 0;
+    transition: margin-bottom 600ms ease 400ms, opacity 600ms ease 500ms;
+  }
+  nav .navRight.active .navFooter {
+    margin-bottom: 0;
+    opacity: 1;
+  }
   .navFooter h3 {
     font-family: "PT Mono", serif;
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 18px;
     padding: 0 40px;
   }
   nav .navRight.active .navFooter a {
-    font-size: 16px;
+    font-size: 20px;
     text-decoration: none;
     padding: 8px 0 0 0;
     margin: 0 40px;
+  }
+}
+@media only screen and (max-width: 660px) {
+  nav .navRight.active a {
+    font-size: 30px;
   }
 }
