project responsiveness added

--- a/src/components/skills/skillsStyles.css
+++ b/src/components/skills/skillsStyles.css
@@ -95,7 +95,7 @@ h4 {
   .skills p {
     display: none;
   }
-  .arrowLink .linkLeft {
+  .skills .arrowLink .linkLeft {
     display: none;
   }
   .skills h3 {
