--- a/src/components/mission/MissionStyles.css
+++ b/src/components/mission/MissionStyles.css
@@ -7,12 +7,12 @@
   padding: 100px 0;
 }
 .missionStatement {
-  transition: opacity 0.5s ease, bottom 0.5s ease;
+  box-sizing: border-box;
+  transition: opacity 0.5s ease, bottom 0.8s ease;
   width: 645px;
   position: absolute;
   bottom: -20px;
   right: 50px;
-
   padding: 50px;
   text-align: left;
   opacity: 0;
@@ -52,4 +52,44 @@
   right: 0;
   bottom: 0;
   font-size: 13px;
+}
+.missionStatement .statement:nth-child(1) {
+  margin-top: 0;
+}
+
+@media only screen and (max-width: 1025px) {
+  .mission img {
+    padding-bottom: 40px;
+  }
+  .mission .statement {
+    font-size: 16px;
+  }
+  .missionStatement {
+    padding: 40px;
+    width: 450px;
+    right: 20px;
+  }
+  .mission {
+    padding: 100px 0;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .largeSection.mission {
+    padding: 60px 0;
+  }
+  .missionStatement {
+    width: 100%;
+    position: relative;
+    right: 0;
+    bottom: -20px;
+  }
+  .missionStatement.active {
+    bottom: 44px;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .largeSection.mission {
+    padding: 60px 0;
+  }
 }
