--- a/src/components/info/InfoStyles.css
+++ b/src/components/info/InfoStyles.css
@@ -103,3 +103,23 @@
   margin: 0;
   align-self: center;
 }
+
+@media only screen and (max-width: 1025px) {
+  .info {
+    flex-direction: column-reverse;
+  }
+  .info .left,
+  .info .right {
+    width: 100%;
+    box-sizing: border-box;
+  }
+  .game {
+    position: unset;
+    padding-top: 30px;
+  }
+}
+@media only screen and (max-width: 660px) {
+  .info .right p.header {
+    font-size: 22px;
+  }
+}
